--- a/client/views/layout.pug
+++ b/client/views/layout.pug
@@ -3,5 +3,8 @@ html
   head
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
+    link(rel='stylesheet', href='https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css')
+    link(rel='stylesheet', href='https://pro.fontawesome.com/releases/v5.10.0/css/all.css')
+    script(src="javascripts/deleteUser.js")
   body
     block content
